--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 
     <!-- Header -->
 
-    <div id="header">
-      <h1>My Times</h1>
-      <ul class="nav">
-        <li>World</li>
-        <li>U.S.</li>
-        <li>Tech</li>
-        <li>Science</li>
-      </ul>
-    </div>
+    <header>
+      <div class="logo">
+        <img src="./resources/images/img-myt-logo.jpg" />
+        <span>My Times</span>
+      </div>
+      <nav>
+        <span><a href="#">World</a></span>
+        <span><a href="#">U.S.</a></span>
+        <span><a href="#">Tech</a></span>
+        <span><a href="#">Science</a></span>
+      </nav>
+    </header>
   </body>
 </html>
