added main content divs

--- a/index.html
+++ b/index.html
@@ -21,5 +21,41 @@
         <span><a href="#">Science</a></span>
       </nav>
     </header>
+
+    <!-- Main Body -->
+
+    <div class="main-content">
+
+      <!-- first column -->
+
+      <div class="column large">
+        <div class="lead-story">
+        </div>
+        <div class="image">
+        </div>
+        <div class="stories">
+        </div>
+      </div>
+
+      <!-- Second Column -->
+
+      <div class="column medium">
+      </div>
+      <div class="column small">
+        <div class="txt-box">
+        </div>
+      </div>
+    </div>
+
+    <!-- Third Column -->
+
+    <div class="column small">
+    </div>
+
+    <!-- Footer -->
+
+    <footer>
+    </footer>
+
   </body>
 </html>
