--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
       <div class="column large">
         <div class="lead-story">
-          <div class="lead-image">
+          <div class="story-img">
             <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
           </div>
-          <p class="lead-txt">MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+          <p class="lead txt">MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
         </div>
         <div class="stories">
           <div class="story">
@@ -41,7 +41,7 @@
               <h2>Orca Spends Vacation at Land World Puget</h2>
               <p class="txt">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
             </div>
-            <div class="story-image">
+            <div class="story-img img2">
               <span>Earth Spins Backwards for 2017</span>
             </div>
           </div>
@@ -50,7 +50,7 @@
               <h2>Burger for Breakfast: How Early is too Early?</h2>
               <p class="txt">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
             </div>
-            <div class="story-image">
+            <div class="story-img img3">
               <span>Research Shows Cameras Erase Memory</span>
             </div>
           </div>
@@ -60,25 +60,50 @@
       <!-- Second Column -->
 
       <div class="column medium">
-      </div>
-      <div class="column small">
-        <div class="txt-box">
+        <div class="story">
+          <div class="story-txt">
+            <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+            <p class="txt">WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
+          </div>
+        </div>
+        <div class="story">
+          <div class="img1 story-img">
+            <span>Cats in Control-Is It a Thing</span>
+          </div>
+          <p class="txt">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
         </div>
       </div>
-    </div>
 
     <!-- Third Column -->
 
     <div class="column small">
-      <div class="cookie">
-      </div>
-      <div class="story">
+      <img class="cookie" src="./resources/images/img-news-bite.png">
+      <div class="news-bites">
+        <h3>NEWS BITES</h3>
+        <span>Cat Emoji Goes Viral</span>
+        <span>Buy Youtube Views</span>
+        <span>Home Business Advertising Ideas</span>
+        <span>Advertising Internet Online</span>
+        <span>Illustration in Marketing Materials</span>
+        <span>Finally a Top Secret Way You Can</span>
       </div>
     </div>
-
+  </div>
     <!-- Footer -->
 
     <footer>
+      <div class="info">
+        <span class="title">MY Times</span>
+        <nav>
+          <span><a href="#">World</a></span>
+          <span><a href="#">U.S.</a></span>
+          <span><a href="#">Tech</a></span>
+          <span><a href="#">Science</a></span>
+        </nav>
+      </div>
+      <div class="copyright">
+        <span>&copy 2016, My Times (A Division of Codecademy bite)</span>
+      </div>
     </footer>
 
   </body>
